name:                lc2016-builder
version:             0.1.0.0
synopsis:            Static Website Builder for Logic Colloquium 2016
-- description:         
-- license:             
license-file:        LICENSE
author:              Christian Sattler
maintainer:          sattler.christian@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable lc2016-builder
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
