name:                lc2016-builder
version:             0.1.0.0
synopsis:            Static website builder for Logic Colloquium 2016
author:              Christian Sattler
maintainer:          sattler.christian@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable lc2016-builder
  main-is:              Main.hs
  default-extensions:   FlexibleContexts
                      , FlexibleInstances
                      , ScopedTypeVariables
                      , RankNTypes
                      , StandaloneDeriving
                      , NegativeLiterals
                      , TupleSections
                      , LambdaCase
                      , OverloadedStrings
  build-depends:        base >=4.8 && <4.9
                      , blaze-html >=0.8.1 && <0.8.2
                      , blaze-markup >=0.7.0.2 && <0.7.1
                      , bytestring >=0.10.6.0 && <0.10.7
                      , filepath >=1.4.0 && <1.4.1
                      , process >=1.2.3 && <1.2.4
  hs-source-dirs:       src
  default-language:     Haskell2010
